Fix intro hero title center alignment

--- a/css/intro.css
+++ b/css/intro.css
@@ -41,7 +41,7 @@
 .hero-title {
   font-size: 1.6em;
   font-weight: bold;
-  text-align: left;
+  text-align: center;
   line-height: 1.6;
   max-width: 90%;
   margin: 0 auto 0.6em;
@@ -80,7 +80,7 @@
     font-size: 2.4em;
     max-width: 700px;
     line-height: 1.4;
-    text-align: left;
+    text-align: center;
   }
 
   .hero-sub {
